--- a/Bruno_Urban_TFM.ipynb
+++ b/Bruno_Urban_TFM.ipynb
@@ -5298,7 +5298,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#top5 = generate_recommendation(df, playlist_vector, nondf_playlist)\n",
+        "top5 = generate_recommendation(df, playlist_vector, nondf_playlist)\n",
         "top5.head()"
       ],
       "metadata": {
