--- a/Bruno_Urban_TFM.ipynb
+++ b/Bruno_Urban_TFM.ipynb
@@ -4202,8 +4202,8 @@
     {
       "cell_type": "code",
       "source": [
-        "client_id = \"09a515455c5f4965ba8a75c607fd46b8\"\n",
-        "client_secret = \"21de86bf4b094af9bf91712e7b6b3356\""
+        "client_id = \"#################\"\n",
+        "client_secret = \"#####################\""
       ],
       "metadata": {
         "id": "DhqeL88jyOBH"
@@ -4223,7 +4223,7 @@
     {
       "cell_type": "code",
       "source": [
-        "sp = spotipy.Spotify(auth_manager=SpotifyOAuth(client_id=\"09a515455c5f4965ba8a75c607fd46b8\", client_secret=\"21de86bf4b094af9bf91712e7b6b3356\", redirect_uri=\"https://example.com/callback/\", scope=\"user-library-read\",open_browser=False))"
+        "sp = spotipy.Spotify(auth_manager=SpotifyOAuth(client_id=\"################\", client_secret=\"###################\", redirect_uri=\"https://example.com/callback/\", scope=\"user-library-read\",open_browser=False))"
       ],
       "metadata": {
         "id": "rMRGLLheycHB"
